@@ -33,6 +33,10 @@ also tries to attach the corresponding metrics file (with extension `.afm'
 or `.pfm').
 .
 .PP
+Besides the string,
+.B ftstring
+also displays two stress test pattens sensitive to rendering flaws, such as
+incorrect gamma settings.
 This program is part of the FreeType demos package.
 .
 .
